--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>FAQ</title>
+  <title>Workday FAQ</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 </head>
@@ -10,8 +11,10 @@
   <div id="app">Loading...</div>
   <script>
     window.$docsify = {
-      loadSidebar: true,
-      search: ['/', '/faq.md']
+      name: 'Workday FAQ',
+      repo: '',
+      search: 'auto',
+      homepage: 'Workday_FAQ_TableExtract.md'
     }
   </script>
 </body>
