--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     window.$docsify = {
       name: 'Workday FAQ',
       repo: '',
-      search: 'auto',
-      homepage: 'Workday_FAQ_TableExtract.md'
+      search: 'auto'
     }
   </script>
+
 </body>
 </html>
